--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Time tracking dashboard</title>
+  <title>Time tracking dashboard | Frontend Mentor</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,66 +15,67 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="header-contain">
+      <div class="header">
+        <img src="./images/image-jeremy.png" alt="profile-image">
+        <p id="report">Report for</p>
+        <h1 id="name">Jeremy Robson</h1>
+      </div>
+      <div class="select-time">
+        <form>
+          <input type="radio" id="daily" name="period" value="Daily">
+          <label for="daily">Daily</label><br>
+          <input type="radio" id="weekly" name="period" value="Weekly">
+          <label for="weekly">Weekly</label><br>
+          <input type="radio" id="monthly" name="period" value="Monthly">
+          <label for="monthly">Monthly</label><br>          
+        </form>
+      </div>
+    </div>
+    <div class="card-contain">
+      <div class="card">
+        <div class="card1 card-head"></div>
+        <h2>Work<span><a href="">...</a></span></h2>
+        <h3 id="work-time">5hrs</h3>
+        <p id="work-last">Previous - 7hrs</p>   
+      </div>
+      <div class="card">
+        <div class="card2 card-head"></div>
+        <h2>Play<span><a href="">...</a></span></h2>
+        <h3 id="play-time">1hr</h3>
+        <p id="play-last">Previous - 2hrs</p>
+      </div>
+      <div class="card">
+        <div class="card3 card-head"></div>
+        <h2><span>Study<a href="">...</a></span></h2>
+        <h3 id="study-time">0hrs</h3>
+        <p id="study-last">Previous - 1hr</p>
+      </div>
+      <div class="card">
+        <div class="card4 card-head"></div>
+        <h2>Exercise<span><a href="">...</a></span></h2>
+        <h3 id="exercise-time">1hr</h3>
+        <p id="exercise-last">Previous - 1hr</p>      
+      </div>
+      <div class="card">
+        <div class="car5-head"></div>
+        <h2>Social<span><a href="">...</a></span></h2>
+        <h3 id="social-time">1hr</h3>
+        <p id="social-last">Previous - 3hrs</p>
+      </div>
+      <div class="card">
+        <div class="card6 card-head"></div>
+        <h2>Self Care<span><a href="">...</a></span></h2>
+        <h3 id="self-time">0hrs</h3>
+        <p id="self-last">Previous - 1hr</p>
+      </div>
+    </div>
+  </div>
 
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+    Coded by <a href="#">Pakapong S.</a>
   </div>
 </body>
 </html>
