--- a/index.html
+++ b/index.html
@@ -5,72 +5,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   
   <title>Time tracking dashboard | Frontend Mentor</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center; color: white;}
+    .attribution a { color: hsl(228, 45%, 44%);text-decoration: none; }
   </style>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
   <div class="container">
-    <div class="header-contain">
       <div class="header">
-        <img src="./images/image-jeremy.png" alt="profile-image">
-        <p id="report">Report for</p>
-        <h1 id="name">Jeremy Robson</h1>
+        <div class="head-profile">
+          <img src="./images/image-jeremy.png" alt="profile-image" id="img-profile">
+          <p id="report">Report for</p>
+          <h1 class="name">Jeremy</h1>
+          <h1 class="name">Robson</h1>
+        </div>
+        <div class="select-time">
+          <form>
+            <input type="radio" id="daily" name="period" value="Daily">
+            <label for="daily">Daily</label><br>
+            <input type="radio" id="weekly" name="period" value="Weekly">
+            <label for="weekly">Weekly</label><br>
+            <input type="radio" id="monthly" name="period" value="Monthly">
+            <label for="monthly">Monthly</label><br>          
+          </form>
+        </div>
       </div>
-      <div class="select-time">
-        <form>
-          <input type="radio" id="daily" name="period" value="Daily">
-          <label for="daily">Daily</label><br>
-          <input type="radio" id="weekly" name="period" value="Weekly">
-          <label for="weekly">Weekly</label><br>
-          <input type="radio" id="monthly" name="period" value="Monthly">
-          <label for="monthly">Monthly</label><br>          
-        </form>
+
+      <div class="cards card1">
+        <div class="card-head1"></div>
+        <div class="card-content">
+          <h2>Work<span><a href="">...</a></span></h2>
+          <h3 id="work-time">5hrs</h3>
+          <p id="work-last">Previous - 7hrs</p>  
+        </div>
       </div>
-    </div>
-    <div class="card-contain">
-      <div class="card">
-        <div class="card1 card-head"></div>
-        <h2>Work<span><a href="">...</a></span></h2>
-        <h3 id="work-time">5hrs</h3>
-        <p id="work-last">Previous - 7hrs</p>   
+      <div class="cards card2">
+        <div class="card-head2"></div>
+        <div class="card-content">
+          <h2>Play<span><a href="">...</a></span></h2>
+          <h3 id="play-time">1hr</h3>
+          <p id="play-last">Previous - 2hrs</p>
+        </div>
       </div>
-      <div class="card">
-        <div class="card2 card-head"></div>
-        <h2>Play<span><a href="">...</a></span></h2>
-        <h3 id="play-time">1hr</h3>
-        <p id="play-last">Previous - 2hrs</p>
+      <div class="cards card3">
+        <div class="card-head3"></div>
+        <div class="card-content">
+          <h2>Study<span><a href="">...</a></span></h2>
+          <h3 id="study-time">0hrs</h3>
+          <p id="study-last">Previous - 1hr</p>
+        </div>
       </div>
-      <div class="card">
-        <div class="card3 card-head"></div>
-        <h2><span>Study<a href="">...</a></span></h2>
-        <h3 id="study-time">0hrs</h3>
-        <p id="study-last">Previous - 1hr</p>
+      <div class="cards card4">
+        <div class="card-head4"></div>
+        <div class="card-content">
+          <h2>Exercise<span><a href="">...</a></span></h2>
+          <h3 id="exercise-time">1hr</h3>
+          <p id="exercise-last">Previous - 1hr</p>      
+        </div>
       </div>
-      <div class="card">
-        <div class="card4 card-head"></div>
-        <h2>Exercise<span><a href="">...</a></span></h2>
-        <h3 id="exercise-time">1hr</h3>
-        <p id="exercise-last">Previous - 1hr</p>      
+      <div class="cards card5">
+        <div class="card-head5"></div>
+        <div class="card-content">
+          <h2>Social<span><a href="">...</a></span></h2>
+          <h3 id="social-time">1hr</h3>
+          <p id="social-last">Previous - 3hrs</p>
+        </div>
       </div>
-      <div class="card">
-        <div class="car5-head"></div>
-        <h2>Social<span><a href="">...</a></span></h2>
-        <h3 id="social-time">1hr</h3>
-        <p id="social-last">Previous - 3hrs</p>
+      <div class="cards card6">
+        <div class="card-head6"></div>
+        <div class="card-content">
+          <h2>Self Care<span><a href="">...</a></span></h2>
+          <h3 id="self-time">0hrs</h3>
+          <p id="self-last">Previous - 1hr</p>
+        </div>
       </div>
-      <div class="card">
-        <div class="card6 card-head"></div>
-        <h2>Self Care<span><a href="">...</a></span></h2>
-        <h3 id="self-time">0hrs</h3>
-        <p id="self-last">Previous - 1hr</p>
-      </div>
-    </div>
   </div>
 
   <div class="attribution">
