add mobile view to page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
       <div class="header">
         <div class="head-profile">
           <img src="./images/image-jeremy.png" alt="profile-image" id="img-profile">
-          <p id="report">Report for</p>
-          <h1 class="name">Jeremy</h1>
-          <h1 class="name">Robson</h1>
+          <div>
+            <p id="report">Report for</p>
+            <h1 class="name">Jeremy</h1>
+            <h1 class="name">Robson</h1>
+          </div>
         </div>
         <div class="select-time">
           <form>
@@ -45,48 +47,61 @@
         <div class="card-head1"></div>
         <div class="card-content">
           <h2>Work<span><a href="">...</a></span></h2>
-          <h3 id="work-time">5hrs</h3>
-          <p id="work-last">Previous - 7hrs</p>  
+          <div class="times">
+            <h3 id="work-time">5hrs</h3>
+            <p id="work-last">Previous - 7hrs</p>  
+          </div>
         </div>
       </div>
       <div class="cards card2">
         <div class="card-head2"></div>
         <div class="card-content">
           <h2>Play<span><a href="">...</a></span></h2>
-          <h3 id="play-time">1hr</h3>
-          <p id="play-last">Previous - 2hrs</p>
+          <div class="times">
+            <h3 id="play-time">1hr</h3>
+            <p id="play-last">Previous - 2hrs</p>
+          </div>
         </div>
       </div>
       <div class="cards card3">
         <div class="card-head3"></div>
         <div class="card-content">
           <h2>Study<span><a href="">...</a></span></h2>
-          <h3 id="study-time">0hrs</h3>
-          <p id="study-last">Previous - 1hr</p>
+          <div class="times">
+            <h3 id="study-time">0hrs</h3>
+            <p id="study-last">Previous - 1hr</p>
+          </div>
         </div>
       </div>
       <div class="cards card4">
         <div class="card-head4"></div>
         <div class="card-content">
           <h2>Exercise<span><a href="">...</a></span></h2>
-          <h3 id="exercise-time">1hr</h3>
-          <p id="exercise-last">Previous - 1hr</p>      
+          <div class="times">
+            <h3 id="exercise-time">1hr</h3>
+            <p id="exercise-last">Previous - 1hr</p>     
+          </div>
         </div>
       </div>
       <div class="cards card5">
         <div class="card-head5"></div>
         <div class="card-content">
           <h2>Social<span><a href="">...</a></span></h2>
-          <h3 id="social-time">1hr</h3>
-          <p id="social-last">Previous - 3hrs</p>
+          <div class="times">
+            <h3 id="social-time">1hr</h3>
+            <p id="social-last">Previous - 3hrs</p>
+          </div>
         </div>
       </div>
       <div class="cards card6">
         <div class="card-head6"></div>
         <div class="card-content">
           <h2>Self Care<span><a href="">...</a></span></h2>
-          <h3 id="self-time">0hrs</h3>
-          <p id="self-last">Previous - 1hr</p>
+          <div class="times">
+            <h3 id="self-time">0hrs</h3>
+            <p id="self-last">Previous - 1hr</p>
+          </div>
+
         </div>
       </div>
   </div>
@@ -95,5 +110,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
     Coded by <a href="#">Pakapong S.</a>
   </div>
+
+  
 </body>
 </html>
