funtion pull JSON data to change time text and debug 1hr show 1hrs

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div class="card-content">
           <h2>Self Care<span><a href="">...</a></span></h2>
           <div class="times">
-            <h3 id="self-time">0hrs</h3>
-            <p id="self-last">Previous - 1hr</p>
+            <h3 id="self-care-time">0hrs</h3>
+            <p id="self-care-last">Previous - 1hr</p>
           </div>
 
         </div>
