--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-    Coded by <a href="#">Pakapong S.</a>
+    Coded by <a href="https://github.com/Spakapong" target="_blank">Pakapong S.</a>
   </div>
 
   <script type="module" src="./script.js"></script>
